--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,12 +2,12 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ main ]
+    branches: [ warp ]
     paths:
       - 'Dockerfile'
       - 'x-cf.sh'
   pull_request:
-    branches: [ main ]
+    branches: [ warp ]
   workflow_dispatch:
 
 jobs:
@@ -38,4 +38,4 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/x-cf:latest
+            ghcr.io/${{ github.repository_owner }}/x-cf-warp:latest
