--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,4 +14,8 @@ services:
       WARP_MODE: all
       CFIP_v4: ip.sb
       CFIP_v6: ip.sb
-  
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
