--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -34,4 +34,4 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/x-cf-warp:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/x-cf:warp
